# FastFFT

./: .buildinfo  .gitignore  .vscode  CMakeLists.txt  DFTbyDecomposition.cu  DFTbyDecomposition.h  FastFFT.cu  FastFFT.cuh  FastFFT.h  Image.cu  Image.cuh  LICENSE  Makefile  README.md  _appendix.html  genindex.html  intro.html  objects.inv  search.html  searchindex.js  test.cu  test_helpers.h
.github/ISSUE_TEMPLATE/: bug_report.html  how-do-i-do----.html
.github/workflows/: 2d_Regression_Tests.yaml  2d_Unit_Tests.yaml  3d_Unit_Tests.yaml  check_tests.yaml
.vscode_shared/BenHimes/: c_cpp_properties.json  settings.json  tasks.json
_docs/MS/: dummy.html  intro.html  manuscript.html  testfile.html
_docs/references/: class_reference.html  coding_conventions.html  coordinate_conventions.html  development_tools.html  intro.html  naming_conventions.html
_sources/: intro.md
_sources/.github/ISSUE_TEMPLATE/: how-do-i-do----.md
_sources/_docs/MS/: intro.md  manuscript.md  testfile.md
_sources/_docs/references/: coordinate_conventions.md
_sources/docs/TM/: intro.md
_sources/docs/TM/discussions/: discussions.md
_sources/docs/TM/howto/: howto.md
_sources/docs/TM/reference/: reference.md
_sources/docs/TM/tutorials/: make_3d_ref.md  tutorials.md
_sources/docs/dev/: intro.md
_sources/docs/dev/discussions/: discussions.md
_sources/docs/dev/getting_started/: contributor_agreement.md  develoment_environment.md  software_hierarchy.md
_sources/docs/dev/howto/: howto.md
_sources/docs/dev/howto/Collaboration/: git_workflow.md  intro.md
_sources/docs/dev/howto/ImageProcessing/: cpu_data_io.md  how_to_image_processing.md
_sources/docs/dev/howto/Utilities/: debugging_profiling.md
_sources/docs/dev/reference/: alphabetical.md  reference.md
_sources/docs/dev/reference/classes/: intro.md
_sources/docs/dev/reference/classes/Image/: QuickAndDirtyReadSlice.md
_sources/docs/dev/reference/classes/MRCFile/: MRCFile.md  OpenFile.md  ReadSliceFromDisk.md
_sources/docs/dev/tutorials/: tutorials.md
_sources/docs/sim/: intro.md
_sources/docs/sim/discussions/: discussions.md
_sources/docs/sim/howto/: howto.md
_sources/docs/sim/reference/: reference.md
_sources/docs/sim/tutorials/: get_cistem.md  tutorials.md
_sources/docs/spa/: intro.md
_sources/docs/spa/discussions/: discussions.md
_sources/docs/spa/howto/: howto.md
_sources/docs/spa/reference/: reference.md
_sources/docs/spa/tutorials/: tutorials.md
_sources/docs/tomo/: intro.md
_sources/docs/tomo/discussions/: ctftilt.md  discussions.md
_sources/docs/tomo/howto/: howto.md
_sources/docs/tomo/reference/: reference.md
_sources/docs/tomo/tutorials/: tutorials.md
cmake/: AddFlags.cmake  AddFlagsHelpers.cmake  AddQtPath.cmake  CUDASetup.cmake  IDESetup.cmake  InstallDeps.cmake  LICENSE  ProjectSetup.cmake  README.md
cmake/find/: FindFFTW.cmake  FindSphinx.cmake
cmake/settings/: CompilerWarnings.cmake  PreventInSourceBuilds.cmake  ProjectEnvironment.cmake  ProjectOptions.cmake  Version.h.in
cmake/targets/: fastfft.cmake  fastfft_docs.cmake  fastfft_tests.cmake
cpp/: Image.cu  Image.cuh  test.cu
docs/: _config.yml  _toc.yml  intro.md  references.bib
docs/TM/: intro.html
docs/TM/discussions/: discussions.html
docs/TM/howto/: howto.html
docs/TM/reference/: reference.html
docs/TM/tutorials/: make_3d_ref.html  tutorials.html
docs/_docs/MS/: intro.md  manuscript.md
docs/_docs/references/: class_reference.md  development_tools.md  usage.md
docs/dev/: intro.html
docs/dev/discussions/: discussions.html
docs/dev/getting_started/: contributor_agreement.html  develoment_environment.html  developer_hierarchy.html  software_hierarchy.html
docs/dev/howto/: debugging_profiling.html  howto.html
docs/dev/howto/Collaboration/: git_workflow.html  intro.html
docs/dev/howto/ImageProcessing/: cpu_data_io.html  how_to_image_processing.html
docs/dev/howto/Utilities/: debugging_profiling.html  utilities.html
docs/dev/reference/: alphabetical.html  reference.html
docs/dev/reference/classes/: intro.html
docs/dev/reference/classes/Image/: QuickAndDirtyReadSlice.html
docs/dev/reference/classes/MRCFile/: MRCFile.html  OpenFile.html  ReadSliceFromDisk.html
docs/dev/tutorials/: tutorials.html
docs/sim/: intro.html
docs/sim/discussions/: discussions.html
docs/sim/howto/: howto.html
docs/sim/reference/: reference.html
docs/sim/tutorials/: get_cistem.html  tutorials.html
docs/spa/: intro.html
docs/spa/discussions/: discussions.html
docs/spa/howto/: howto.html
docs/spa/reference/: reference.html
docs/spa/tutorials/: tutorials.html
docs/tomo/: intro.html
docs/tomo/discussions/: ctftilt.html  discussions.html
docs/tomo/howto/: howto.html
docs/tomo/reference/: reference.html
docs/tomo/tutorials/: tutorials.html
ext/fftw/: fftw.cmake
ext/half/: half.cmake
include/: FastFFT.cuh  FastFFT.cuh.h  FastFFT.h
include/detail/: checks_and_debug.h  concepts.h  config.h  detail.h  device_functions.h  device_helpers.h  functors.h  memory_addressing.h  types.h
python/: test_wrapper.cpp
src/: FastFFT.cu  FastFFT.cu.cpp  FastFFT.cuh  FastFFT.h
src/cpp/: Image.cu  Image.cu.cpp  Image.cuh  Image.cuh.h  helper_functions.cuh
src/fastfft/: CMakeLists.txt  FastFFT.cu  Image.cu  Image.cuh  types.cuh
src/python/: README.md
src/python/FastFFT_binding/: FastFFT_python_binding.cu  test_cupy.py
src/python/test_binding/: Makefile  fastfft_test  test_pybind11.cu  test_pybind11.py
src/tests/: constant_image_test.cu  helper_functions.cuh  non_cuda_compilation_unit.cu  padded_convolution_FastFFT_vs_cuFFT.cu  padded_convolution_fp32_vs_fp16_io.cu  preop_functor_scale_test.cu  test-results.txt  test.cu  test.cu.cpp  test_half_precision_buffer.cu  tests.h  unit_impulse_test.cu
